re PR c++/14284 (Failure to select obvious template specialisation)

PR c++/14284
	* pt.c (dependent_type_p_r): A template template parameter is a
	dependent type.

	PR c++/14284
	* g++.dg/template/ttp8.C: New test.

From-SVN: r78547